@@ -1,3 +1,7 @@
+2013-02-17:
+	* (seebs) Fix uninitialized variable in unlink, fix force-fsync for
+	  Darwin (off64_t is not a distinct type there).
+
 2013-02-16:
 	* (seebs) Add wrapper setting which automatically returns a fixed
 	  value from some wrappers. Add fixed-value wrappers for all the
